# circom-analyzer

./: .gitignore  CircomLexer.py  CircomParser.g4  CircomParser.interp  CircomParser.py  CircomParserListener.py  LICENSE  README.md  pyproject.toml  test.py
examples/Edwards2Montgomery/c/constraint/: constraint.c
examples/Edwards2Montgomery/circom/: Edwards2Montgomery.circom
examples/IsZero/c/computation/: Makefile  compute.c
examples/IsZero/c/constraint/: Makefile  constraint.c
examples/IsZero/circom/: is-zero.circom
examples/IsZero/z3/: check-satisfy
tests/examples/Decoder/c/computation/: compute.c
tests/examples/Decoder/c/constraint/: constraint.c
tests/examples/Decoder/circom/: Decoder.circom
tests/examples/Edwards2Montgomery/c/computation/: compute.c
tests/examples/IsZero/z3/: check-aligned
translator/: CircomType.py  Listener.py  common.py  translator.py
translator/circom/: run.py
translator/circom/backend/: CircomType.py  __init__.py  common.py  translator.py
translator/circom/parser/: CircomLexer.g4  CircomLexer.interp  CircomLexer.py  CircomParser.py  CircomParser.tokens  CircomParserListener.py  demo.circom  test_circom.py
